--- a/index.html
+++ b/index.html
@@ -6,15 +6,91 @@
     <title>Kyosuke Tsukamoto portfolio</title>
 </head>
 <body>
-<header>
 
-</header>
+<header class="header">
+<h1>KYOSUKE TSUKAMOTO</h1>
+<nav>
+<ul>
+<li>TOP</li>
+<li>ABOUT</li>
+<li>WORKS</li>
+<li>CONTACT</li>
+</ul>
+</nav>
+<!-- /header --></header>
+
 <div class="main">
 
-</div>
-<footer>
+<div class="main-visual">
+<img src="/images/png/main_visual.png" alt="塚本恭輔のポートフォリオ">
+<!-- /main-visual --></div>
+
+<section class="about">
+<h2>ABOUT</h2>
+<img src="/images/png/tk.png" alt="塚本恭輔輔について">
+
+<section class="profile">
+<h3>PROFILE</h3>
+<p class="name">塚本恭輔</p>
+<p class="name-en">Kyosuke Tsukamoto</p>
+<p class="background">1997年生まれ　デザイナー<br>
+ 東京都内の事業会社でWeb制作をしています。<br>
+公立はこだて未来大学 情報デザインコースを卒業し、株式会社アイスタイルに新卒入社。<br>
+UIデザイナーとして、デザイン・コーディングなどの業務を行う。</p>
+<ul class="icon-sns">
+<li><a href="https://www.instagram.com/tukkyo117/?hl=ja"><img src="/images/png/icon-instagram.png" alt="instagram"></a></li>
+<li><a href="https://www.facebook.com/profile.php?id=100022762025755"><img src="/images/png/icon-facebook.png" alt="facebook"></a></li>
+<!-- /icon-sns --></ul>
+<!-- /profile --></section>
+
+<section class="design">
+<h3>DESIGN</h3>
+<img src="/images/png/icon-design.png" alt="">
+<p>デザインは目的を達成するための手段であると考えています。目的に沿ったクリエイティブを作成するために、情報を届ける相手がいることを常に意識してデザインを行っています。<br>
+    Illustrator, Photoshop, XDなどのデザインツールを活用し、バナー制作やWebデザイン、UI設計などをさせていただいてます。</p>
+<!-- /design --></section>
+
+<section class="coding">
+<h3>CODING</h3>
+<img src="/images/png/icon-coading.png" alt="">
+<p>ユーザーが実現したいことに対する適切な動きや効果を用いることで、目的に沿ったユーザー体験を実現できると考えています。<br>
+    ただデザインされたものを再現するのではなく、SEO対策やメンテナンス性を考慮したコーディングを行うよう心掛けています。</p>
+<!-- /coding --></section>
+
+<section class="skills">
+<h3>SKILLS</h3>
+<ul class="design-skills">
+<li><img src="/images/svg/icon-illustrator.svg" alt=""><p>Illustrator</p></li>
+<li><img src="/images/svg/icon-photoshop.svg" alt=""><p>Photoshop</p></li>
+<li><img src="/images/svg/icon-xd.svg" alt=""><p>XD</p></li>
+<li><img src="/images/svg/icon-premiere-pro.svg" alt=""><p>Premiere Pro</p></li>
+<li><img src="/images/svg/icon-lightroom.svg.svg" alt=""><p>Lightroom</p></li>
+</ul>
+<ul class="coding-skills">
+<li><img src="/images/png/icon-html.png" alt=""><p>HTML</p></li>
+<li><img src="/images/png/icon-css.png" alt=""><p>CSS</p></li>
+<li><img src="/images/png/icon-javascript.png" alt=""><p>JavaScript</p></li>
+<li><img src="/images/svg/icon-bootstrap.svg" alt=""><p>Bootstrap</p></li>
+<li><img src="/images/svg/icon-github.svg" alt=""><p>GitHub</p></li>
+</ul>
+<!-- /skills --></section>
+<!-- /about --></section>
+
+
+<section class="works">
+
+<!-- /works --></section>
+
+
+<section class="contact">
+
+<!-- /contact --></section> 
+
+<!-- /main --></div>
+
+<footer class="footer">
     
-</footer>
+<!-- /footer --></footer>
     
 </body>
 </html>
