--- a/index.html
+++ b/index.html
@@ -79,34 +79,47 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <section class="skills">
 <h3 class="sub-title">SKILLS</h3>
 <div class="skills-box">
-<div class="design-box">
-<ul class="skills-design">
+<div class="skills-box-child">
+<ul>
 <li><img src="./images/svg/icon-illustrator.svg" alt=""><p>Illustrator</p></li>
 <li><img src="./images/svg/icon-premiere-pro.svg" alt=""><p>Premiere Pro</p></li>
-<!-- /design-skills --></ul>
-<!-- /design-box --></div>
-<div class="design-box">
-<ul class="skills-design">
+</ul>
+<!-- /skills-box-child --></div>
+<div class="skills-box-child">
+<ul>
 <li><img src="./images/svg/icon-photoshop.svg" alt=""><p>Photoshop</p></li>
 <li><img src="./images/svg/icon-lightroom.svg" alt=""><p>Lightroom</p></li>
-<!-- /design-skills --></ul>
-<!-- /design-box --></div>
-<div class="design-box">
-<ul class="skills-design">
+</ul>
+<!-- /skills-box-child --></div>
+<div class="skills-box-child">
+<ul>
 <li><img src="./images/svg/icon-xd.svg" alt=""><p>XD</p></li>
-<!-- /design-skills --></ul>
-<!-- /design-box --></div>
+</ul>
+<!-- /skills-box-child --></div>
 <!-- /skills-box --></div>
 
-<ul class="skills-coding">
+<div class="skills-box">
+<div class="skills-box-child">
+<ul>
 <li><img src="./images/png/icon-html.png" alt=""><p>HTML</p></li>
-<li><img src="./images/png/icon-css.png" alt=""><p>CSS</p></li>
-<li><img src="./images/png/icon-javascript.png" alt=""><p>JavaScript</p></li>
 <li><img src="./images/svg/icon-bootstrap.svg" alt=""><p>Bootstrap</p></li>
+</ul>
+<!-- /skills-box-child --></div>
+<div class="skills-box-child">
+<ul>
+<li><img src="./images/png/icon-css.png" alt=""><p>CSS</p></li>
 <li><img src="./images/svg/icon-github.svg" alt=""><p>GitHub</p></li>
-<!-- /coding-skills --></ul>
-</div>
+</ul>
+<!-- /skills-box-child --></div>
+<div class="skills-box-child">
+<ul>
+<li><img src="./images/png/icon-javascript.png" alt=""><p>JavaScript</p></li>
+</ul>
+<!-- /skills-box-child --></div>
+<!-- /skills-box --></div>
+
 <!-- /skills --></section>
+
 <!-- /about --></section>
 
 <section class="works">
