TOPページ, WORKS, CONTACTの追加

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 2019年 公立はこだて未来大学 情報デザインコースを卒業し、株式会社アイスタイルに新卒入社。<br>
 UIデザイナーとして、デザイン・コーディングなどの業務を行う。</p>
 <ul class="icon-sns">
-<li><a href="https://www.instagram.com/tukkyo117/?hl=ja"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--   
---><li><a href="https://www.facebook.com/profile.php?id=100022762025755"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
+<li><a href="https://www.instagram.com/tukkyo117/?hl=ja" target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--   
+--><li><a href="https://www.facebook.com/profile.php?id=100022762025755" target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
 <!-- /icon-sns --></ul>
 <!-- /profile-box --></div>
 <!-- /profile --></section>
@@ -124,39 +124,42 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 
 <section class="works">
 <h2 class="section-title works-title">WORKS</h2>
-<ul>
+<ul class="works-list">
 <li><p><a href=""><img src="./images/png/reqruit.png" alt="就活ポートフォリオサイト"></a></p></li>
 <li><p><a href=""><img src="./images/png/app-atcosme.png" alt="アットコスメアプリバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
-</ul>
-<p>MORE</p>
+<!-- /works-list --></ul>
+<div class="arrow"></div>
+<p class="more">MORE</p>
 <!-- /works --></section>
 
 <section class="contact">
 <h2 class="section-title contact-title">CONTACT</h2>
-<p>プロフィールや作品見て興味が湧いた方はこちらからご連絡お願いします！</p>
-<form action="#">
-<p>Company</p>
-<p><input type="text" name="company"></p>
-<p>Name</p>
-<p><input type="text" name="name"></p>
-<p>E-mail</p>
-<p><input type="text" name="e-mail"></p>
-<p>TEL</p>
-<p><input type="tel" name="tel"></p>
-<p>Message</p>
-<p><input type="text" name="message"></p>
-<button type="button" name="send">SEND</button>
+<div class="contact-box">
+<p class="contact-explanation">プロフィールや作品見て興味が湧いた方はこちらからご連絡お願いします！</p>
+<form class="form" action="#">
+<p class="form-item">Company</p>
+<p class="form-input"><input type="text" name="company"></p>
+<p class="form-item">Name</p><span class="required">必須</span>
+<p class="form-input"><input type="text" name="name"></p>
+<p class="form-item">E-mail</p><span class="required">必須</span>
+<p class="form-input"><input type="text" name="e-mail"></p>
+<p class="form-item">TEL</p>
+<p class="form-input"><input type="tel" name="tel"></p>
+<p class="form-item">Message</p><span class="required">必須</span>
+<p class="form-input input-large"><input type="text" name="message"></p>
+<button class="btn-send" type="button" name="send">SEND</button>
 </form>
+<!-- /contact-box --></div>
 <!-- /contact --></section> 
 <!-- /main --></div>
 
 <footer class="footer">
-<ul class="icon-sns">
-<li><a href="https://www.instagram.com/tukkyo117/?hl=ja"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li>
-<li><a href="https://www.facebook.com/profile.php?id=100022762025755"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
-<!-- /icon-sns --></ul>
+<ul class="icon-sns icon-footer">
+<li><a href="https://www.instagram.com/tukkyo117/?hl=ja"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--
+--><li><a href="https://www.facebook.com/profile.php?id=100022762025755"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
+<!-- /icon-sns icon-footer --></ul>
 <a href="#">
 <span>TOP</span>
 </a>
