TOPページの実装完了

--- a/index.html
+++ b/index.html
@@ -160,10 +160,8 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <li><a href="https://www.instagram.com/tukkyo117/?hl=ja"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--
 --><li><a href="https://www.facebook.com/profile.php?id=100022762025755"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
 <!-- /icon-sns icon-footer --></ul>
-<a href="#">
-<span>TOP</span>
-</a>
-<small>© 2020 Kyosuke Tsukamoto.</small>
+<div id="page_top"><a href="#">TOP</a></div>
+<small class="copyright">© 2020 Kyosuke Tsukamoto.</small>
 <!-- /footer --></footer>
 
 <!-- /container --></div>  
