ビジュアル画像、メニュー、SENDボタンの修正

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Kyosuke Tsukamoto portfolio</title>
 </head>
 <body>
@@ -19,10 +19,10 @@
 <!-- /btn --></div>
 <nav class="global-nav">
 <ul>
-<li><a href="#">TOP</a></li>
-<li><a href="#">ABOUT</a></li>
-<li><a href="#">WORKS</a></li>
-<li><a href="#">CONTACT</a></li>
+<li><a class="nav-item nav-top" href="#">TOP</a></li>
+<li><a class="nav-item nav-about" href="#">ABOUT</a></li>
+<li><a class="nav-item nav-works" href="#">WORKS</a></li>
+<li><a class="nav-item nav-contact" href="#">CONTACT</a></li>
 </ul>
 <!-- /global-nav --></nav>
 <!-- /header --></header>
@@ -125,7 +125,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <section class="works">
 <h2 class="section-title works-title">WORKS</h2>
 <ul class="works-list">
-<li><p><a href=""><img src="./images/png/reqruit.png" alt="就活ポートフォリオサイト"></a></p></li>
+<li><p><a href="./works/reqruit.html"><img src="./images/png/reqruit.png" alt="就活ポートフォリオサイト"></a></p></li>
 <li><p><a href=""><img src="./images/png/app-atcosme.png" alt="アットコスメアプリバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
@@ -157,10 +157,10 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 
 <footer class="footer">
 <ul class="icon-sns icon-footer">
-<li><a href="https://www.instagram.com/tukkyo117/?hl=ja"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--
---><li><a href="https://www.facebook.com/profile.php?id=100022762025755"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
+<li><a href="https://www.instagram.com/tukkyo117/?hl=ja target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--
+--><li><a href="https://www.facebook.com/profile.php?id=100022762025755 target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
 <!-- /icon-sns icon-footer --></ul>
-<div id="page_top"><a href="#">TOP</a></div>
+<div class="page-hidden" id="page-top"><a href="#">TOP</a></div>
 <small class="copyright">© 2020 Kyosuke Tsukamoto.</small>
 <!-- /footer --></footer>
 
