齋藤さんレビューの修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
 
-<header class="header">
+<header class="header" id="js-header">
 <h1 class="header-title"><a href="#">KYOSUKE TSUKAMOTO</a></h1>
 
 <div class="btn-icon" id="js-btn-icon">
@@ -17,12 +17,12 @@
     <span class="icon-bar icon-bar2"></span>
     <span class="icon-bar icon-bar3"></span>
 <!-- /btn --></div>
-<nav class="global-nav">
+<nav class="global-nav" id="js-global-nav">
 <ul>
 <li><a class="nav-item nav-top" href="#">TOP</a></li>
-<li><a class="nav-item nav-about" href="#">ABOUT</a></li>
-<li><a class="nav-item nav-works" href="#">WORKS</a></li>
-<li><a class="nav-item nav-contact" href="#">CONTACT</a></li>
+<li><a class="nav-item nav-about" href="#about-top">ABOUT</a></li>
+<li><a class="nav-item nav-works" href="#works-top">WORKS</a></li>
+<li><a class="nav-item nav-contact" href="#contact-top">CONTACT</a></li>
 </ul>
 <!-- /global-nav --></nav>
 <!-- /header --></header>
@@ -32,7 +32,7 @@
 <img src="./images/png/main_visual.png" alt="塚本恭輔のポートフォリオ">
 <!-- /main-visual --></div>
 
-<section class="about">
+<section class="about" id="about-top">
 <div class="about-visual">
 <h2 class="section-title  about-title">ABOUT</h2>
 <img src="./images/png/tk.png" alt="塚本恭輔輔について">
@@ -122,7 +122,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 
 <!-- /about --></section>
 
-<section class="works">
+<section class="works" id="works-top">
 <h2 class="section-title works-title">WORKS</h2>
 <ul class="works-list">
 <li><p><a href="./works/reqruit.html"><img src="./images/png/reqruit.png" alt="就活ポートフォリオサイト"></a></p></li>
@@ -130,11 +130,11 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <li><p><a href=""><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
 <!-- /works-list --></ul>
-<div class="arrow"></div>
+<div class="arrow"><img src="./images/png/more-arrow.png" alt=""></div>
 <p class="more">MORE</p>
 <!-- /works --></section>
 
-<section class="contact">
+<section class="contact" id="contact-top">
 <h2 class="section-title contact-title">CONTACT</h2>
 <div class="contact-box">
 <p class="contact-explanation">プロフィールや作品見て興味が湧いた方はこちらからご連絡お願いします！</p>
@@ -146,7 +146,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <p class="form-item">E-mail</p><span class="required">必須</span>
 <p class="form-input"><input type="text" name="e-mail"></p>
 <p class="form-item">TEL</p>
-<p class="form-input"><input type="tel" name="tel"></p>
+<p class="form-input"><input type="tel" name="tel" placeholder="例）09012345678"></p>
 <p class="form-item">Message</p><span class="required">必須</span>
 <p class="form-input input-large"><input type="text" name="message"></p>
 <button class="btn-send" type="button" name="send">SEND</button>
@@ -164,7 +164,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <small class="copyright">© 2020 Kyosuke Tsukamoto.</small>
 <!-- /footer --></footer>
 
-<!-- /container --></div>  
-<script src="./script.js"></script>
+<!-- /container --></div>
+<script src="./js/script.js"></script>
 </body>
 </html>
