more矢印の修正とメニューの調整

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Kyosuke Tsukamoto portfolio</title>
 </head>
@@ -130,7 +131,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <li><p><a href=""><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
 <!-- /works-list --></ul>
-<div class="arrow"><img src="./images/png/more-arrow.png" alt=""></div>
+<div class="arrow"><img src="./images/svg/more-arrow.svg" alt=""></div>
 <p class="more">MORE</p>
 <!-- /works --></section>
 
