target属性の修正

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 
 <footer class="footer">
 <ul class="icon-sns icon-footer">
-<li><a href="https://www.instagram.com/tukkyo117/?hl=ja target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--
---><li><a href="https://www.facebook.com/profile.php?id=100022762025755 target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
+<li><a href="https://www.instagram.com/tukkyo117/?hl=ja" target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-instagram.png" alt="instagram"></a></li><!--
+--><li><a href="https://www.facebook.com/profile.php?id=100022762025755" target="_blank" rel="noopener noreferrer"><img src="./images/png/icon-facebook.png" alt="facebook"></a></li>
 <!-- /icon-sns icon-footer --></ul>
 <div class="page-hidden" id="page-top"><a href="#">TOP</a></div>
 <small class="copyright">© 2020 Kyosuke Tsukamoto.</small>
