--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <p class="form-item">TEL</p>
 <p class="form-input"><input type="tel" name="tel" placeholder="例）09012345678"></p>
 <p class="form-item">Message</p><span class="required">必須</span>
-<p class="form-input input-large"><input type="text" name="message"></p>
+<p class="form-input input-large"><textarea name="message" id="js-message" cols="20" rows="400"></textarea></p>
 <button class="btn-send" type="button" name="send">SEND</button>
 </form>
 <!-- /contact-box --></div>
