--- a/works/reqruit.html
+++ b/works/reqruit.html
@@ -9,20 +9,32 @@
 </head>
 <body>
 <header class="header">
-<span class="back"></span>
-<p class="header-title">KYOSUKE TSUKAMOTO</p>
-</header>
+<div class="btn-back">
+<a href="../index.html"><img src="../images/svg/btn-back.svg" alt=""></a>
+<!-- /btn-back --></div>
+<h1 class="header-title"><a href="#">KYOSUKE TSUKAMOTO</a></h1>
+<!-- /header --></header>
+
 <div class="works-wrap">
+
 <div class="works-image">
 <img src="../images/png/reqruit-long.png" alt="就活ポートフォリオサイト">
-</div>
+<!-- /works-image --></div>
+
+<div class="works-item-title">
 <h1>就活ポートフォリオサイト</h1>
+<!-- /works-item-title --></div>
 <p class="use-skills">XD / HTML / CSS / Bootstrap</p>
 <p class="season-time">制作時期：2017年11月 / 制作時間：1人月</p>
 <p class="works-explanation">学生時代に就活で使用していたポートフォリオサイトです。作ってきた作品に使用した技術や工夫した点を伝えるために、各作品の制作過程を記載しています。また、作品の説明の他に、好きなことや大切にしていること、就活の軸などを伝えることで「自分」という人間を知ってもらう工夫を行いました。<br>
-    <a href="https://b1015081.github.io/tk-reqruit.github.io/index.html target="_blank" rel="noopener noreferrer">実際のサイトはこちら<img src="#"></a></p>
-<p>PREV</p>
-<p>NEXT</p>
-</div>
+<a href="https://b1015081.github.io/tk-reqruit.github.io/index.html target="_blank" rel="noopener noreferrer">実際のサイトはこちら<img src="../images/svg/external-link.svg"></a>
+</p>
+
+<div class="works-move">
+<p class="works-prev"><a href=""><span class="icon-prev"><img src="../images/svg/icon-prev.svg" alt=""></span>PREV</a></p>
+<p class="works-next"><a href="">NEXT<span class="icon-next"><img src="../images/svg/icon-next.svg" alt=""></span></a></p>
+<!-- /works-move --></div>
+
+<!-- /works-wrap --></div>
 </body>
 </html>
