入力フォームにpaddingを追加

--- a/works/reqruit.html
+++ b/works/reqruit.html
@@ -12,7 +12,7 @@
 <div class="btn-back">
 <a href="../index.html"><img src="../images/svg/btn-back.svg" alt=""></a>
 <!-- /btn-back --></div>
-<h1 class="header-title"><a href="#">KYOSUKE TSUKAMOTO</a></h1>
+<p class="header-title"><a href="../index.html">KYOSUKE TSUKAMOTO</a></p>
 <!-- /header --></header>
 
 <div class="works-wrap">
@@ -27,12 +27,11 @@
 <p class="use-skills">XD / HTML / CSS / Bootstrap</p>
 <p class="season-time">制作時期：2017年11月 / 制作時間：1人月</p>
 <p class="works-explanation">学生時代に就活で使用していたポートフォリオサイトです。作ってきた作品に使用した技術や工夫した点を伝えるために、各作品の制作過程を記載しています。また、作品の説明の他に、好きなことや大切にしていること、就活の軸などを伝えることで「自分」という人間を知ってもらう工夫を行いました。<br>
-<a href="https://b1015081.github.io/tk-reqruit.github.io/index.html target="_blank" rel="noopener noreferrer">実際のサイトはこちら<img src="../images/svg/external-link.svg"></a>
+<a href="https://b1015081.github.io/tk-reqruit.github.io/index.html" target="_blank" rel="noopener noreferrer">実際のサイトはこちら<img src="../images/svg/external-link.svg"></a>
 </p>
 
 <div class="works-move">
-<p class="works-prev"><a href=""><span class="icon-prev"><img src="../images/svg/icon-prev.svg" alt=""></span>PREV</a></p>
-<p class="works-next"><a href="">NEXT<span class="icon-next"><img src="../images/svg/icon-next.svg" alt=""></span></a></p>
+<p class="works-next"><a href="./app-atcosme.html">NEXT<span class="icon-next"><img src="../images/svg/icon-next.svg" alt=""></span></a></p>
 <!-- /works-move --></div>
 
 <!-- /works-wrap --></div>
