--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <h2 class="section-title works-title">WORKS</h2>
 <ul class="works-list">
 <li><p><a href="./works/reqruit.html"><img src="./images/png/reqruit.png" alt="就活ポートフォリオサイト"></a></p></li>
-<li><p><a href=""><img src="./images/png/app-atcosme.png" alt="アットコスメアプリバナー"></a></p></li>
+<li><p><a href="./works/app-atcosme.html"><img src="./images/png/app-atcosme.png" alt="アットコスメアプリバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
 <li><p><a href=""><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
 <!-- /works-list --></ul>
@@ -149,7 +149,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <p class="form-item">TEL</p>
 <p class="form-input"><input type="tel" name="tel" placeholder="例）09012345678"></p>
 <p class="form-item">Message</p><span class="required">必須</span>
-<p class="form-input input-large"><textarea name="message" id="js-message" cols="20" rows="400"></textarea></p>
+<p class="form-input input-large"><textarea name="message" id="js-message" cols="30" rows="400"></textarea></p>
 <button class="btn-send" type="button" name="send">SEND</button>
 </form>
 <!-- /contact-box --></div>
