inputタグにmaxlengthを追加

--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <p class="contact-explanation">プロフィールや作品見て興味が湧いた方はこちらからご連絡お願いします！</p>
 <form class="form" action="#">
 <p class="form-item">Company</p>
-<p class="form-input"><input type="text" name="company"></p>
+<p class="form-input"><input type="text" name="company" maxlength="30"></p>
 <p class="form-item">Name</p><span class="required">必須</span>
-<p class="form-input"><input type="text" name="name"></p>
+<p class="form-input"><input type="text" name="name" maxlength="30"></p>
 <p class="form-item">E-mail</p><span class="required">必須</span>
-<p class="form-input"><input type="text" name="e-mail"></p>
+<p class="form-input"><input type="email" name="e-mail"></p>
 <p class="form-item">TEL</p>
-<p class="form-input"><input type="tel" name="tel" placeholder="例）09012345678"></p>
+<p class="form-input"><input type="tel" name="tel" maxlength="11" placeholder="例）09012345678"></p>
 <p class="form-item">Message</p><span class="required">必須</span>
-<p class="form-input input-large"><textarea name="message" id="js-message" cols="30" rows="400"></textarea></p>
+<p class="form-input input-large"><textarea name="message" maxlength="9999" id="js-message" cols="30" rows="400"></textarea></p>
 <button class="btn-send" type="button" name="send">SEND</button>
 </form>
 <!-- /contact-box --></div>
