works詳細ページの追加

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Kyosuke Tsukamoto portfolio</title>
 </head>
@@ -102,13 +101,13 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="skills-box">
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/png/icon-html.png" alt=""><p>HTML</p></li>
+<li><img src="./images/png/icon-html.png" alt=""><p>HTML5</p></li>
 <li><img src="./images/svg/icon-bootstrap.svg" alt=""><p>Bootstrap</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/png/icon-css.png" alt=""><p>CSS</p></li>
+<li><img src="./images/png/icon-css.png" alt=""><p>CSS3</p></li>
 <li><img src="./images/svg/icon-github.svg" alt=""><p>GitHub</p></li>
 </ul>
 <!-- /skills-box-child --></div>
@@ -128,8 +127,8 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <ul class="works-list">
 <li><p><a href="./works/reqruit.html"><img src="./images/png/reqruit.png" alt="就活ポートフォリオサイト"></a></p></li>
 <li><p><a href="./works/app-atcosme.html"><img src="./images/png/app-atcosme.png" alt="アットコスメアプリバナー"></a></p></li>
-<li><p><a href=""><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
-<li><p><a href=""><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
+<li><p><a href="./works/beautyday.html"><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
+<li><p><a href="./works/mens-cosme.html"><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
 <!-- /works-list --></ul>
 <div class="arrow"><img src="./images/svg/more-arrow.svg" alt=""></div>
 <p class="more">MORE</p>
@@ -166,6 +165,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <!-- /footer --></footer>
 
 <!-- /container --></div>
+<script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/script.js"></script>
 </body>
 </html>
