--- a/works/app-atcosme.html
+++ b/works/app-atcosme.html
@@ -30,7 +30,7 @@
 
 <div class="works-move">
 <p class="works-prev"><a href="./reqruit.html"><span class="icon-prev"><img src="../images/svg/icon-prev.svg" alt=""></span>PREV</a></p>
-<p class="works-next"><a href="">NEXT<span class="icon-next"><img src="../images/svg/icon-next.svg" alt=""></span></a></p>
+<p class="works-next"><a href="beautyday.html">NEXT<span class="icon-next"><img src="../images/svg/icon-next.svg" alt=""></span></a></p>
 <!-- /works-move --></div>
 
 <!-- /works-wrap --></div>
