Googleフォントの反映

--- a/works/reqruit.html
+++ b/works/reqruit.html
@@ -6,6 +6,7 @@
     <title>就活ポートフォリオサイト</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/works.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="header">
