インデントの修正

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyosuke Tsukamoto portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kyosuke Tsukamoto portfolio</title>
+<link rel="stylesheet" href="./css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -61,8 +61,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="prof-icon">
 <img src="./images/png/icon-design.png" alt="">
 <!-- /prof-icon --></div>
-<p class="prof-text">デザインは目的を達成するための手段であると考えています。目的に沿ったクリエイティブを作成するために、情報を届ける相手がいることを常に意識してデザインを行っています。<br>
-    Illustrator, Photoshop, XDなどのデザインツールを活用し、バナー制作やWebデザイン、UI設計などをさせていただいてます。</p>
+<p class="prof-text">デザインは目的を達成するための手段であると考えています。目的に沿ったクリエイティブを作成するために、情報を届ける相手がいることを常に意識してデザインを行っています。<br>Illustrator, Photoshop, XDなどのデザインツールを活用し、バナー制作やWebデザイン、UI設計などをさせていただいてます。</p>
 <!-- /design --></section>
 <!-- /prof-box --></div>
 
