--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="skills-box">
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/svg/icon-illustrator.svg" alt="Illustrator"><p>Illustrator</p></li>
-<li><img src="./images/svg/icon-premiere-pro.svg" alt="Premiere Pro"><p>Premiere Pro</p></li>
+<li><img src="./images/svg/icon-illustrator.svg" alt=""><p>Illustrator</p></li>
+<li><img src="./images/svg/icon-premiere-pro.svg" alt=""><p>Premiere Pro</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/svg/icon-photoshop.svg" alt="Photoshop"><p>Photoshop</p></li>
-<li><img src="./images/svg/icon-lightroom.svg" alt="Lightroom"><p>Lightroom</p></li>
+<li><img src="./images/svg/icon-photoshop.svg" alt=""><p>Photoshop</p></li>
+<li><img src="./images/svg/icon-lightroom.svg" alt=""><p>Lightroom</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/svg/icon-xd.svg" alt="XD"><p>XD</p></li>
+<li><img src="./images/svg/icon-xd.svg" alt=""><p>XD</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <!-- /skills-box --></div>
@@ -101,19 +101,19 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="skills-box">
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/png/icon-html.png" alt="HTML5"><p>HTML5</p></li>
-<li><img src="./images/svg/icon-bootstrap.svg" alt="Bootstrap"><p>Bootstrap</p></li>
+<li><img src="./images/png/icon-html.png" alt=""><p>HTML5</p></li>
+<li><img src="./images/svg/icon-bootstrap.svg" alt=""><p>Bootstrap</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/png/icon-css.png" alt="CSS3"><p>CSS3</p></li>
-<li><img src="./images/svg/icon-github.svg" alt="GitHub"><p>GitHub</p></li>
+<li><img src="./images/png/icon-css.png" alt=""><p>CSS3</p></li>
+<li><img src="./images/svg/icon-github.svg" alt=""><p>GitHub</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <div class="skills-box-child">
 <ul>
-<li><img src="./images/png/icon-javascript.png" alt="JavaScript"><p>JavaScript</p></li>
+<li><img src="./images/png/icon-javascript.png" alt=""><p>JavaScript</p></li>
 </ul>
 <!-- /skills-box-child --></div>
 <!-- /skills-box --></div>
