--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kyosuke Tsukamoto portfolio</title>
+<link rel="stylesheet" href="./css/reset.css">
 <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
@@ -14,9 +15,9 @@
 <h1 class="header-title"><a href="#">KYOSUKE TSUKAMOTO</a></h1>
 
 <div class="btn-icon" id="js-btn-icon">
-    <span class="icon-bar icon-bar1"></span>
-    <span class="icon-bar icon-bar2"></span>
-    <span class="icon-bar icon-bar3"></span>
+<span class="icon-bar icon-bar1"></span>
+<span class="icon-bar icon-bar2"></span>
+<span class="icon-bar icon-bar3"></span>
 <!-- /btn --></div>
 <nav class="global-nav" id="js-global-nav">
 <ul>
@@ -44,7 +45,7 @@
 <div class="prof-box">
 <p class="name">塚本恭輔</p>
 <p class="name-en">Kyosuke Tsukamoto</p>
-<p class="background">1997年生まれ　デザイナー<br>
+<p class="prof-text">1997年生まれ　デザイナー<br>
  東京都内の事業会社でWeb制作をしています。<br>
 2019年 公立はこだて未来大学 情報デザインコースを卒業し、株式会社アイスタイルに新卒入社。<br>
 UIデザイナーとして、デザイン・コーディングなどの業務を行う。</p>
@@ -58,7 +59,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="prof-box">
 <section class="design">
 <h3 class="sub-title">DESIGN</h3>
-<div class="prof-icon">
+<div class="tech-icon">
 <img src="./images/png/icon-design.png" alt="">
 <!-- /prof-icon --></div>
 <p class="prof-text">デザインは目的を達成するための手段であると考えています。目的に沿ったクリエイティブを作成するために、情報を届ける相手がいることを常に意識してデザインを行っています。<br>Illustrator, Photoshop, XDなどのデザインツールを活用し、バナー制作やWebデザイン、UI設計などをさせていただいてます。</p>
@@ -68,7 +69,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="prof-box">
 <section class="coding">
 <h3 class="sub-title">CODING</h3>
-<div class="prof-icon">
+<div class="tech-icon">
 <img src="./images/png/icon-coading.png" alt="">
 <!-- /prof-icon --></div>
 <p class="prof-text">ユーザーが実現したいことに対する適切な動きや効果を用いることで、目的に沿ったユーザー体験を実現できると考えています。<br>
