--- a/works/app-atcosme.html
+++ b/works/app-atcosme.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>就活ポートフォリオサイト</title>
+<link rel="stylesheet" href="./css/reset.css">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/works.css">
+<link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="header">
