--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <li><p><a href="./works/beautyday.html"><img src="./images/png/beautyday.jpg" alt="ビューティーデイバナー"></a></p></li>
 <li><p><a href="./works/mens-cosme.html"><img src="./images/png/mens-cosme.jpg" alt="メンズコスメバナー"></a></p></li>
 <!-- /works-list --></ul>
-<div class="arrow"><img src="./images/svg/more-arrow.svg" alt=""></div>
+<a class="arrow" href="#"></a>
 <p class="more">MORE</p>
 <!-- /works --></section>
 
