送信完了モーダルの表示

--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <p class="form-input input-large"><textarea name="message" maxlength="9999" id="js-message" cols="30" rows="400"></textarea></p>
 <button class="btn-send" id="js-btn-send" type="button" name="send" onclick="onButtonClick();">SEND</button>
 </form>
+
 <div class="send-done" id="js-send-done">
 <p class="send-wording">送信が完了しました</p>
 <p class="attention">※ 3日経っても返信がない場合は、お手数ですがもう一度ご連絡をお願い致します。</p>
 <p class="back-top">BACK</p>
-</div>
+<!-- /send-done --></div>
+
 <!-- /contact-box --></div>
 
 
