back押下時のモーダル非表示

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <div class="send-done" id="js-send-done">
 <p class="send-wording">送信が完了しました</p>
 <p class="attention">※ 3日経っても返信がない場合は、お手数ですがもう一度ご連絡をお願い致します。</p>
-<p class="back-top">BACK</p>
+<p class="back-top" id="js-back-top">BACK</p>
 <!-- /send-done --></div>
 
 <!-- /contact-box --></div>
