--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@ UIデザイナーとして、デザイン・コーディングなどの業務を
 <h2 class="section-title contact-title">CONTACT</h2>
 <div class="contact-box">
 <p class="contact-explanation">プロフィールや作品見て興味が湧いた方はこちらからご連絡お願いします！</p>
-<form class="form">
+<form class="form" id="js-form">
 <p class="form-item">Company</p>
 <p class="form-input"><input type="text" name="company" maxlength="30"></p>
 <p class="form-item">Name</p><span class="required">必須</span>
-<p class="form-input send-check"><input type="text" name="name" maxlength="30"></p>
+<p class="form-input send-check"><input type="text" name="name" maxlength="30" id="input_mesage"></p>
 <p class="form-item">E-mail</p><span class="required">必須</span>
-<p class="form-input send-check"><input type="email" name="e-mail"></p>
+<p class="form-input send-check"><input type="email" name="e-mail" id="input_mesage"></p>
 <p class="form-item">TEL</p>
 <p class="form-input"><input type="tel" name="tel" maxlength="11" placeholder="例）09012345678"></p>
 <p class="form-item">Message</p><span class="required">必須</span>
-<p class="form-input input-large send-check"><textarea name="message" maxlength="9999" id="js-message" cols="30" rows="400"></textarea></p>
+<p class="form-input input-large send-check"><textarea name="message" maxlength="9999" id="input_message" cols="30" rows="400"></textarea></p>
 <button class="btn-send" id="js-btn-send" type="button" name="send" onclick="onButtonClick();">SEND</button>
 </form>
 
